# comfortable-swipe

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  MANIFEST.in  README.md  VERSION  comfortable-swipe  comfortable-swipe-buffer.cpp  comfortable-swipe-config.cpp  comfortable-swipe-defines.cpp  comfortable-swipe-gesture-mousehold.cpp  comfortable-swipe-gesture-swipe-xdokey.cpp  comfortable-swipe-gesture-swipe-xdomouse.cpp  comfortable-swipe-gesture-swipe.cpp  comfortable-swipe-main.cpp  comfortable-swipe.compile.sh  comfortable-swipe.cpp  comfortable-swipe.python.cpp  command_line.cpp  compile  compile.sh  cpp.compile.sh  defaults.conf  install  main.cpp  requirements.txt  setup.cfg  setup.py  uninstall
comfortable_swipe/: __init__.py  __main__.py  all_headers.hpp  autostart.py  constants.py  driver.cpp  lib  lib.cpp  service.py  status.py  util.py
comfortable_swipe/cpp/: __init__.py
comfortable_swipe/gesture/: keyboard_swipe_gesture.h  mouse_hold_gesture.cpp  mouse_hold_gesture.h  swipe_gesture.cpp  swipe_gesture.h  swipe_gesture.regex.cpp
comfortable_swipe/res/: comfortable-swipe.desktop  defaults.conf
comfortable_swipe/service/: autostart.cpp  buffer.cpp  config.cpp  help.cpp  restart.cpp  start.cpp  status.cpp  stop.cpp
comfortable_swipe/util/: autostart_filename.cpp  conf_filename.cpp  read_config_file.cpp
config/: comfortable-swipe.conf  comfortable-swipe.desktop
cpp/: _index.cpp  _index.hpp  _macro.cpp  _python.cpp  comfortable-swipe.cpp
cpp/gesture/: _index.cpp  swipe_gesture.cpp  swipe_gesture.h  swipe_gesture.regex.cpp  xdo_gesture.cpp
cpp/service/: _index.cpp  _index.hpp  _python.cpp  autostart.cpp  buffer.cpp  debug.cpp  help.cpp  restart.cpp  start.cpp  status.cpp  stop.cpp
cpp/util/: _index.cpp  _index.hpp  _python.cpp  read_config_file.cpp
data/: comfortable-swipe.desktop  defaults.conf
lib/: _python.cpp  comfortable-swipe  comfortable_swipe  index.hpp
lib/gesture/: _index.hpp  keyboard_swipe_gesture.cpp  keyboard_swipe_gesture.h  mouse_swipe_gesture.cpp  mouse_swipe_gesture.h  pinch_gesture.cpp  pinch_gesture.h  pinch_gesture.regex.cpp  swipe_gesture.cpp  swipe_gesture.h  swipe_gesture.regex.cpp  xdo_gesture.cpp  xdo_gesture.h
lib/service/: _index.cpp  _index.hpp  _python.cpp  autostart.cpp  buffer.cpp  config.cpp  debug.cpp  help.cpp  restart.cpp  start.cpp  status.cpp  stop.cpp
lib/util/: _index.cpp  _index.hpp  conf_filename.cpp  read_config_file.cpp
scripts/: comfortable-swipe
share/: comfortable-swipe.desktop
src/: comfortable-swipe-serve  comfortable-swipe.cpp  comfortable-swipe.hpp  comfortable_swipe.cpp  comfortable_swipe.h  compile  defaults.conf  main.cpp  start.cpp  start.h
src/comfortable_swipe/: index.cpp  index.hpp
src/comfortable_swipe/gesture/: swipe_gesture.cpp  swipe_gesture.h
src/comfortable_swipe/service/: autostart.cpp  buffer.cpp  help.cpp  restart.cpp  start.cpp  stop.cpp
src/comfortable_swipe/util/: autostart_filename.cpp  conf_filename.cpp  read_config_file.cpp  regex.cpp
src/gesture/: keyboard_swipe_gesture.cpp  keyboard_swipe_gesture.h  mouse_hold_gesture.cpp  mouse_hold_gesture.h  swipe_gesture.h  xdo_gesture.cpp  xdo_gesture.h
src/lib/: comfortable_swipe  index.hpp
src/lib/gesture/: pinch_gesture.cpp  pinch_gesture.h  pinch_gesture.regex.cpp  swipe_gesture.cpp  swipe_gesture.h  xdo_gesture.cpp
src/lib/service/: buffer.cpp  help.cpp  start.cpp  stop.cpp
src/lib/util/: autostart_filename.cpp  read_config_file.cpp
src/service/: autostart.cpp  buffer.cpp  config.cpp  debug.cpp  help.cpp  restart.cpp  start.cpp  status.cpp
src/util/: conf_filename.cpp
tests/: run_tests  test_compiler.sh  test_regex.cpp  test_swipe.sh
